--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -13,6 +13,7 @@
     android:id="@+id/name_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:textSize="16sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
