--- a/app/src/main/res/layout/simple_list_item_1.xml
+++ b/app/src/main/res/layout/simple_list_item_1.xml
@@ -1,15 +1,36 @@
-<TextView
+<android.support.constraint.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/text1"
-  android:background="?android:selectableItemBackground"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:textAppearance="?android:attr/textAppearanceListItemSmall"
-  android:gravity="center_vertical"
-  android:drawableStart="@drawable/circle"
-  android:drawablePadding="8dp"
-  android:paddingStart="4dp"
-  android:paddingEnd="4dp"
-  android:minHeight="?android:attr/listPreferredItemHeightSmall"
-  tools:text="Title text" />
+  android:background="?android:selectableItemBackground"
+  android:minHeight="?android:attr/listPreferredItemHeightSmall">
+
+  <android.support.design.widget.FloatingActionButton
+    android:id="@+id/fab"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="4dp"
+    app:backgroundTint="@color/list_fab_bg"
+    app:fabSize="mini"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@drawable/ic_play_arrow_24dp" />
+
+  <TextView
+    android:id="@+id/text1"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="4dp"
+    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toEndOf="@+id/fab"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="Workout Name"/>
+
+</android.support.constraint.ConstraintLayout>
