--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="green">#4CAF50</color>
-  <color name="purple">#5E35A6</color>
+  <color name="bg">#222c66</color>
+  <color name="list_fab_bg">#3f65a6</color>
+
+  <color name="timer_bg_ring">#19214d</color>
+
+  <color name="timer_fab_purple">#536dfe</color>
+  <color name="ring_purple">#536dfe</color>
+  <color name="ring_purple_darker">#4a61e2</color>
+
+  <color name="timer_fab_green">#00e676</color>
+  <color name="ring_green">#00e676</color>
+  <color name="ring_green_darker">#04c76f</color>
+
+  <color name="timer_fab_pink">#f50057</color>
+
+  <color name="md_deep_purple_500">#673AB7</color>
+  <color name="md_green_500">#4CAF50</color>
+  <color name="md_pink_500">#E91E63</color>
 </resources>
