--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <style name="AppTheme" parent="Theme.AppCompat">
-    <item name="android:windowBackground">@color/black</item>
+    <item name="android:windowBackground">@color/bg</item>
   </style>
 </resources>
