Migrate to AndroidX and update dependencies

--- a/app/src/main/res/layout/simple_list_item_1.xml
+++ b/app/src/main/res/layout/simple_list_item_1.xml
@@ -1,4 +1,4 @@
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
@@ -7,7 +7,7 @@
   android:background="?android:selectableItemBackground"
   android:minHeight="?android:attr/listPreferredItemHeightSmall">
 
-  <android.support.design.widget.FloatingActionButton
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/fab"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -33,4 +33,4 @@
     app:layout_constraintTop_toTopOf="parent"
     tools:text="Workout Name"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
