--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
   android:id="@+id/bg"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,7 +9,7 @@
   tools:context=".ui.WorkoutActivity"
   tools:deviceIds="wear">
 
-  <android.support.v7.widget.AppCompatTextView
+  <androidx.appcompat.widget.AppCompatTextView
     android:id="@+id/name_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -20,7 +20,7 @@
     app:layout_constraintTop_toTopOf="@+id/name_guideline"
     tools:text="Warmup" />
 
-  <android.support.v7.widget.AppCompatTextView
+  <androidx.appcompat.widget.AppCompatTextView
     android:id="@+id/time_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
     app:layout_constraintTop_toTopOf="parent"
     tools:text="03:00" />
 
-  <android.support.design.widget.FloatingActionButton
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/start_pause_btn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/time_text" />
 
-  <android.support.design.widget.FloatingActionButton
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/reset_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
     app:layout_constraintStart_toStartOf="@+id/time_text"
     app:layout_constraintTop_toBottomOf="@+id/time_text" />
 
-  <android.support.design.widget.FloatingActionButton
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/close_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -75,11 +75,11 @@
     app:layout_constraintEnd_toEndOf="@+id/time_text"
     app:layout_constraintTop_toBottomOf="@+id/time_text" />
 
-  <android.support.constraint.Guideline
+  <androidx.constraintlayout.widget.Guideline
     android:id="@+id/name_guideline"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintGuide_percent="0.125" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
