--- a/common/src/main/res/layout/activity_workouts.xml
+++ b/common/src/main/res/layout/activity_workouts.xml
@@ -6,6 +6,6 @@
   android:id="@+id/list"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".ui.WorkoutActivity"
+  tools:context=".ui.workout.WorkoutActivity"
   tools:listitem="@layout/simple_list_item_1"
   tools:deviceIds="wear"/>
